--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
-site_name: Template de Entrega
-site_author: Sandmann, H.
-site_url: https://hsandmann.github.io/documentation.template
-repo_url: https://github.com/hsandmann/documentation.template
-repo_name: github/documentation.template
+site_name: Redes Neurais - Erik Soares
+site_author: Erik Soares
+site_url: https://eriksoaress.github.io/redesneurais.eriksoares
+repo_url: https://github.com/eriksoaress/redesneurais-mkdocs
+repo_name: github/redesneurais.eriksoares
 
 theme:
   name: material
@@ -132,11 +132,12 @@ extra_javascript:
   - https://fastly.jsdelivr.net/npm/echarts/dist/echarts.min.js
 
 nav:
-  - Home: index.md
-  - This documentation: ./thisdocumentation/main.md
-  - Roteiros:
-    - Roteiro 1: ./roteiro1/main.md
-    - Roteiro 2: ./roteiro2/main.md
-    - Roteiro 3: ./roteiro3/main.md
-    - Roteiro 4: ./roteiro4/main.md
-  - Projeto: ./projeto/main.md
+  - Data: ./data/main.md
+  # - Home: index.md
+  # - This documentation: ./thisdocumentation/main.md
+  # - Roteiros:
+  #   - Roteiro 1: ./roteiro1/main.md
+  #   - Roteiro 2: ./roteiro2/main.md
+  #   - Roteiro 3: ./roteiro3/main.md
+  #   - Roteiro 4: ./roteiro4/main.md
+  # - Projeto: ./projeto/main.md
